It's a broken version. I can't bind my logic to the design.

--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -1,10 +1,20 @@
 ﻿@using Domain
 @model Domain.Blog
 
-<div class="text-center">
-    
-    @foreach (Post post in Model.Posts)
-    {
-        <p>@post.Header</p>
-    }
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <script type="text/javascript">
+        constants = {
+            getPage: '@Url.RouteUrl("default", new {controller = "Home", action = "Index" })'
+        }
+    </script>
+    <title>Index</title>
+</head>
+<body>
+    <div id="content">
+    </div>
+    <script type="text/javascript" src="@Url.Content("~/assets/bundle.js")"></script>
+</body>
+</html>
